# baxter_noetic

./: README.md  package.xml  smoke_test_results.txt
baxter/: baxter.sh
baxter_common/baxter_common/: package.xml
baxter_common/baxter_core_msgs/srv/: BridgePublishersAuth.srv  BridgePublishersForce.srv
baxter_common/baxter_description/urdf/: baxter.urdf.xacro
baxter_core_msgs/: CMakeLists.txt
baxter_core_msgs/msg/: BridgePublisher.msg
baxter_examples/: CMakeLists.txt
baxter_examples/scripts/: analog_io_rampup.py  gripper_keyboard.py  head_wobbler.py  ik_service_client.py  joint_position_waypoints.py  joint_recorder.py  joint_torque_springs.py  joint_trajectory_client.py
baxter_examples/src/baxter_external_devices/: getch.py
baxter_moveit_config/config/: baxter.srdf  gazebo_baxter (copy).urdf  gazebo_baxter.urdf  gazebo_controllers (copy).yaml  ros_controllers.yaml  simple_moveit_controllers.yaml  stomp_planning.yaml
baxter_moveit_config/launch/: demo_baxter.launch
baxter_sim_examples/scripts/: ik_pick_and_place_demo.py
baxter_tools/scripts/: camera_control.py  head_cam_display.py  smoke_test.py  update_robot.py
launch/: joint_position_joystick.launch
scripts/: baxter_pnpcode.py  baxter_pnpcode2.py  digital_io_blink.py  gripper_action_client.py  gripper_cuff_control.py  gripper_joystick.py  head_action_client.py  head_wobbler.py  ik_service_client.py  joint_position_file_playback.py  joint_position_joystick.py  joint_position_keyboard.py  joint_trajectory_action_server.py  joint_trajectory_file_playback.py  joint_velocity_puppet.py  joint_velocity_wobbler.py  navigator_io.py
(+6 files in other folders)
